--- a/templates/cicd/buildspec.yml
+++ b/templates/cicd/buildspec.yml
@@ -9,9 +9,12 @@ phases:
       - echo "cd into $CODEBUILD_SRC_DIR"
       - cd $CODEBUILD_SRC_DIR
       # Download the copilot linux binary.
-      - wget {{.BinaryS3BucketPath}}/copilot-linux-{{.Version}}
+      - wget -q {{.BinaryS3BucketPath}}/copilot-linux-{{.Version}}
       - mv ./copilot-linux-{{.Version}} ./copilot-linux
       - chmod +x ./copilot-linux
+      # Download the pack linux binary
+      - wget -q https://github.com/buildpacks/pack/releases/download/v0.14.0/pack-v0.14.0-linux.tgz -O - | tar -xz
+      - chmod +x ./pack
   build:
     commands:
       - echo "Run your tests"
@@ -57,29 +60,41 @@ phases:
           manifest=$(cat $CODEBUILD_SRC_DIR/copilot/$svc/manifest.yml | ruby -ryaml -rjson -e 'puts JSON.pretty_generate(YAML.load(ARGF))')
           base_dockerfile=$(echo $manifest | jq '.image.build')
           build_dockerfile=$(echo $manifest| jq 'if .image.build?.dockerfile? then .image.build.dockerfile else "" end' | sed 's/"//g')
+          build_builder=$(echo $manifest| jq 'if .image.build?.builder? then .image.build.builder else "" end' | sed 's/"//g')
           build_context=$(echo $manifest| jq 'if .image.build?.context? then .image.build.context else "" end' | sed 's/"//g')
-          dockerfile_args=$(echo $manifest | jq 'if .image.build?.args? then .image.build.args else "" end | to_entries?')
-          df_rel_path=$( echo $base_dockerfile | sed 's/"//g')
-          if [ -n "$build_dockerfile" ]; then 
-            df_rel_path=$build_dockerfile
+          if [ -n "$build_builder" ]; then
+            if [ -z "$build_context" ]; then
+              build_context="."
+            fi
+            echo "Service: $svc"
+            echo "Pack builder: $build_builder"
+            echo "Pack context: $build_context"
+            echo "Running command: ./pack build $svc --path $build_context --builder $build_builder";
+            ./pack build $svc:$tag --path $build_context --builder $build_builder
+          else
+            dockerfile_args=$(echo $manifest | jq 'if .image.build?.args? then .image.build.args else "" end | to_entries?')
+            df_rel_path=$( echo $base_dockerfile | sed 's/"//g')
+            if [ -n "$build_dockerfile" ]; then 
+              df_rel_path=$build_dockerfile
+            fi
+            df_path=$df_rel_path
+            df_dir_path=$(dirname "$df_path")
+            if [ -n "$build_context" ]; then
+              df_dir_path=$build_context
+            fi
+            build_args=
+            if [ -n "$dockerfile_args" ]; then
+              for arg in $(echo $dockerfile_args | jq -r '.[] | "\(.key)=\(.value)"'); do 
+                build_args="$build_args--build-arg $arg "
+              done
+            fi
+            echo "Service: $svc"
+            echo "Relative Dockerfile path: $df_rel_path"
+            echo "Docker build context: $df_dir_path"
+            echo "Docker build args: $build_args"
+            echo "Running command: docker build -t $svc:$tag $build_args-f $df_path $df_dir_path";
+            docker build -t $svc:$tag $build_args-f $df_path $df_dir_path;
           fi
-          df_path=$df_rel_path
-          df_dir_path=$(dirname "$df_path")
-          if [ -n "$build_context" ]; then
-            df_dir_path=$build_context
-          fi
-          build_args=
-          if [ -n "$dockerfile_args" ]; then
-            for arg in $(echo $dockerfile_args | jq -r '.[] | "\(.key)=\(.value)"'); do 
-              build_args="$build_args--build-arg $arg "
-            done
-          fi
-          echo "Service: $svc"
-          echo "Relative Dockerfile path: $df_rel_path"
-          echo "Docker build context: $df_dir_path"
-          echo "Docker build args: $build_args"
-          echo "Running command: docker build -t $svc:$tag $build_args-f $df_path $df_dir_path";
-          docker build -t $svc:$tag $build_args-f $df_path $df_dir_path;
           image_id=$(docker images -q $svc:$tag);
           for env in $envs; do
             repo=$(cat $CODEBUILD_SRC_DIR/infrastructure/$svc-$env.params.json | jq '.Parameters.ContainerImage' | sed 's/"//g');
