--- a/templates/workloads/services/backend/manifest.yml
+++ b/templates/workloads/services/backend/manifest.yml
@@ -9,8 +9,11 @@ name: {{.Name}}
 type: {{.Type}}
 
 image:
-  # Docker build arguments. You can specify additional overrides here. Supported: dockerfile, context, args
-  build: {{.Image.Build.BuildArgs.Dockerfile}}
+  # Image build arguments. You can specify additional overrides here. Supported: dockerfile, builder, context, args
+  build: {{- if .Image.Build.BuildArgs.Builder}}
+    builder: {{.Image.Build.BuildArgs.Builder}}{{end}}{{- if .Image.Build.BuildArgs.Dockerfile}}
+    dockerfile: {{.Image.Build.BuildArgs.Dockerfile}}{{end}}
+    
   # Port exposed through your container to route traffic to it.
   port: {{.Image.Port}}{{if .Image.HealthCheck}}
   healthcheck:
