--- a/templates/workloads/services/lb-web/manifest.yml
+++ b/templates/workloads/services/lb-web/manifest.yml
@@ -9,7 +9,8 @@ type: {{.Type}}
 
 image:
   # Docker build arguments. You can specify additional overrides here. Supported: dockerfile, context, args
-  build: {{.Image.Build.BuildArgs.Dockerfile}}
+  build:
+    builder: {{.Image.Build.BuildArgs.Builder}}
   # Port exposed through your container to route traffic to it.
   port: {{.Image.Port}}
 
