--- a/templates/workloads/services/lb-web/manifest.yml
+++ b/templates/workloads/services/lb-web/manifest.yml
@@ -9,8 +9,9 @@ type: {{.Type}}
 
 image:
   # Docker build arguments. You can specify additional overrides here. Supported: dockerfile, context, args
-  build:
-    builder: {{.Image.Build.BuildArgs.Builder}}
+  build: {{- if .Image.Build.BuildArgs.Builder}}
+    builder: {{.Image.Build.BuildArgs.Builder}}{{end}}{{- if .Image.Build.BuildArgs.Dockerfile}}
+    dockerfile: {{.Image.Build.BuildArgs.Dockerfile}}{{end}}
   # Port exposed through your container to route traffic to it.
   port: {{.Image.Port}}
 
